--- a/templates/openstack-cloud-config-secret.yaml
+++ b/templates/openstack-cloud-config-secret.yaml
@@ -2,16 +2,15 @@
 # yamllint disable rule:line-length
 
 {{- $namespace := include "rancher-cluster-templates.derivedNamespace" $ }}
-{{- $userId := regexReplaceAll "^u-" $namespace "" }}
+{{- $suffix := include "rancher-cluster-templates.randomString" . }}
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.cluster.name }}-cloud-config
+  name: {{ .Values.cluster.name }}-cloud-config-{{ $suffix }}
   namespace: {{$namespace}}
   annotations:
-    #rke.cattle.io/object-authorized-for-clusters: {{ .Values.cluster.name }}
-    rke.cattle.io/object-authorized-for-clusters: "*"
+    rke.cattle.io/object-authorized-for-clusters: {{ .Values.cluster.name }}
     #provisioning.cattle.io/owned-by: {{ printf "%s/%s" $namespace .Values.cluster.name }}
 type: Opaque
 stringData:
