Openstack CCM support
Signed-off-by: Radu Moisan <radu.moisan@gmail.com>

--- a/values.yaml
+++ b/values.yaml
@@ -86,7 +86,7 @@ cluster:
       netName: local-net
 
       # Openstack CCM
-      ccmCloudConfigSecretName: "os-ccm-cloud-config"
+      ccmNetConfigSecretName: "os-ccm-net-config"
       subnetId: "345dc7b8-98cc-4f5a-9d7e-b129f6691298"           # the value from secret (if found) takes precedence
       floatingNetworkId: "543d2955-5ab0-4077-8637-0d54cf55695b"  # the value from secret (if found) takes precedence
 
