--- a/values.yaml
+++ b/values.yaml
@@ -65,10 +65,10 @@ cluster:
 
     openstack:
       authUrl: "https://cloud.virtomat.net:5000/v3"
-      applicationCredentialSecretName: "os-app-cred-xtpfiucyek"
+      applicationCredentialSecretName: ""  # "os-app-cred-xtpfiucyek"
       applicationCredentialName: ""
-      applicationCredentialId: "e2002ed4c26c48f5abadd8b79425d3d0"
-      applicationCredentialSecret: "a3cc5aa9d461f8f63757dc1f13e876a049924d6c4bfd18bc7848ff6227c4a503"
+      applicationCredentialId: ""  # "e2002ed4c26c48f5abadd8b79425d3d0"
+      applicationCredentialSecret: ""  # "a3cc5aa9d461f8f63757dc1f13e876a049924d6c4bfd18bc7848ff6227c4a503"
       defaultKeypairName: bootstrap  # User's Key Pair from Openstack/Horizon
       defaultPrivateKeyFileSecretName: openstack-privatekey
       sshPort: 22
@@ -87,8 +87,8 @@ cluster:
 
       # Openstack CCM
       ccmNetConfigSecretName: "os-ccm-net-config"
-      subnetId: "345dc7b8-98cc-4f5a-9d7e-b129f6691298"           # the value from secret (if found) takes precedence
-      floatingNetworkId: "543d2955-5ab0-4077-8637-0d54cf55695b"  # the value from secret (if found) takes precedence
+      subnetId: ""  # "345dc7b8-98cc-4f5a-9d7e-b129f6691298"          # the value from secret (if found) takes precedence
+      floatingNetworkId: ""  # "543d2955-5ab0-4077-8637-0d54cf55695b" # the value from secret (if found) takes precedence
 
     # defaultClusterRoleForProjectMembers:
     # defaultPodSecurityAdmissionConfigurationTemplateName:
