Improved templte defaults
Signed-off-by: Radu Moisan <radu.moisan@gmail.com>

--- a/questions.yaml
+++ b/questions.yaml
@@ -97,7 +97,7 @@ questions:
     group: 'General'
     show_if: configMode=Advanced
   - variable: cluster.config.kubernetesVersion
-    default: v1.30.4+rke2r1
+    default: v1.31.13+rke2r1
     description: 'Specify Kubernetes Version'
     label: 'Kubernetes Version'
     type: enum
@@ -108,6 +108,9 @@ questions:
       - v1.28.13+rke2r1
       - v1.29.8+rke2r1
       - v1.30.4+rke2r1
+      - v1.31.13+rke2r1
+      - v1.32.9+rke2r1
+      - v1.33.5+rke2r1
     group: 'General'
   - variable: cluster.config.openstack.enabled
     description: 'Show General Openstack Configs'
