--- a/values.yaml
+++ b/values.yaml
@@ -221,6 +221,8 @@ cluster:
           service:
             enabled: true
             type: LoadBalancer
+            annotations:
+              loadbalancer.openstack.org/floating-network-id: "office"
 
 nodepools:
   - name: master
